--- a/style/syle.css
+++ b/style/syle.css
@@ -1,16 +1,23 @@
+ 
+
+
 .foto-perfil {
     height: 100%;
     width: auto;
-    max-width:100%;
+    max-width:40%;
     border-radius:50% ;
 }
 
+
 .corPrimaria {
-    background-color: #00BFFF ;
+   background-image: url(../img/fundo.jpg);
+   
 }
+   
+
 
 .corSecundaria {
-    background-color:	#DB7093;
+    background-color:	#090f49;
 }
  p {
     font-family:Arial, Helvetica, sans-serif;
@@ -29,6 +36,7 @@
     text-transform: uppercase;
     font-weight: 700;
     color: white;
+
  }
 
  .titulosAzuis{
@@ -36,13 +44,13 @@
     text-underline-position: below;
     padding-bottom: 20px;
     font-weight: 700;
-    color: #00BFFF ;
+    color: #090f49 ;
 
  }
  
  .textoBranco {
-    color: white !important;
- }
+   color: white !important;
+}
 
  .jumbotron {
     margin-bottom: 8px;
@@ -58,7 +66,7 @@
     font-size: 18px;
     color: black;
 }
- 
 html {
    scroll-behavior: smooth; 
+   
 }
